force-app/main/default/objects/SalesforceCase__x/SalesforceCase__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceCase</externalName>
    <label>Caso Salesforce</label>
    <pluralLabel>Casi Salesforce</pluralLabel>
</CustomObject>