force-app/main/default/objects/SalesforceCase__x/fields/Bil_BankNameC__c.field-meta.xml
<CustomField>
    <fullName>Bil_BankNameC__c</fullName>
    <description>Bil_BankNameC</description>
    <externalDeveloperName>Bil_BankNameC</externalDeveloperName>
    <label>Bil_BankNameC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>