force-app/main/default/objects/SalesforceCase__x/fields/Bil_CUPC__c.field-meta.xml
<CustomField>
    <fullName>Bil_CUPC__c</fullName>
    <description>Bil_CUPC</description>
    <externalDeveloperName>Bil_CUPC</externalDeveloperName>
    <label>Bil_CUPC</label>
    <length>16</length>
    <type>Text</type>
</CustomField>