force-app/main/default/objects/SalesforceCase__x/fields/Bil_DirectDebitStatusFormulaC__c.field-meta.xml
<CustomField>
    <fullName>Bil_DirectDebitStatusFormulaC__c</fullName>
    <description>Bil_DirectDebitStatusFormulaC</description>
    <externalDeveloperName>Bil_DirectDebitStatusFormulaC</externalDeveloperName>
    <label>Bil_DirectDebitStatusFormulaC</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>