force-app/main/default/objects/SalesforceCase__x/fields/Bil_InvoicingAddressFormulaC__c.field-meta.xml
<CustomField>
    <fullName>Bil_InvoicingAddressFormulaC__c</fullName>
    <description>Bil_InvoicingAddressFormulaC</description>
    <externalDeveloperName>Bil_InvoicingAddressFormulaC</externalDeveloperName>
    <label>Bil_InvoicingAddressFormulaC</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>