force-app/main/default/objects/SalesforceCase__x/fields/Bil_PaymentConditionsC__c.field-meta.xml
<CustomField>
    <fullName>Bil_PaymentConditionsC__c</fullName>
    <description>Bil_PaymentConditionsC</description>
    <externalDeveloperName>Bil_PaymentConditionsC</externalDeveloperName>
    <label>Bil_PaymentConditionsC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>