force-app/main/default/objects/SalesforceCase__x/fields/Bil_PaymentMethodC__c.field-meta.xml
<CustomField>
    <fullName>Bil_PaymentMethodC__c</fullName>
    <description>Bil_PaymentMethodC</description>
    <externalDeveloperName>Bil_PaymentMethodC</externalDeveloperName>
    <label>Bil_PaymentMethodC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>