force-app/main/default/objects/SalesforceCase__x/fields/Bil_RevocationDateC__c.field-meta.xml
<CustomField>
    <fullName>Bil_RevocationDateC__c</fullName>
    <description>Bil_RevocationDateC</description>
    <externalDeveloperName>Bil_RevocationDateC</externalDeveloperName>
    <label>Bil_RevocationDateC</label>
    <type>DateTime</type>
</CustomField>