force-app/main/default/objects/SalesforceCase__x/fields/Bil_SignatoryTypeC__c.field-meta.xml
<CustomField>
    <fullName>Bil_SignatoryTypeC__c</fullName>
    <description>Bil_SignatoryTypeC</description>
    <externalDeveloperName>Bil_SignatoryTypeC</externalDeveloperName>
    <label>Bil_SignatoryTypeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>