force-app/main/default/objects/SalesforceCase__x/fields/Bil_SubjectCodeC__c.field-meta.xml
<CustomField>
    <fullName>Bil_SubjectCodeC__c</fullName>
    <description>Bil_SubjectCodeC</description>
    <externalDeveloperName>Bil_SubjectCodeC</externalDeveloperName>
    <label>Bil_SubjectCodeC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>