force-app/main/default/objects/SalesforceCase__x/fields/Bil_SubjectCodeStartDateC__c.field-meta.xml
<CustomField>
    <fullName>Bil_SubjectCodeStartDateC__c</fullName>
    <description>Bil_SubjectCodeStartDateC</description>
    <externalDeveloperName>Bil_SubjectCodeStartDateC</externalDeveloperName>
    <label>Bil_SubjectCodeStartDateC</label>
    <type>DateTime</type>
</CustomField>