force-app/main/default/objects/SalesforceCase__x/fields/Cas_AbnormalReadingC__c.field-meta.xml
<CustomField>
    <fullName>Cas_AbnormalReadingC__c</fullName>
    <description>Cas_AbnormalReadingC</description>
    <externalDeveloperName>Cas_AbnormalReadingC</externalDeveloperName>
    <label>Lettura Anomala</label>
    <length>255</length>
    <type>Text</type>
</CustomField>