force-app/main/default/objects/SalesforceCase__x/fields/Cas_AccountClassC__c.field-meta.xml
<CustomField>
    <fullName>Cas_AccountClassC__c</fullName>
    <description>Cas_AccountClassC</description>
    <externalDeveloperName>Cas_AccountClassC</externalDeveloperName>
    <label>Classe Conto </label>
    <length>255</length>
    <type>Text</type>
</CustomField>