force-app/main/default/objects/SalesforceCase__x/fields/Cas_AccountFiscalCodeFormulaC__c.field-meta.xml
<CustomField>
    <fullName>Cas_AccountFiscalCodeFormulaC__c</fullName>
    <description>Cas_AccountFiscalCodeFormulaC</description>
    <externalDeveloperName>Cas_AccountFiscalCodeFormulaC</externalDeveloperName>
    <label>Codice Fiscale </label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>