force-app/main/default/objects/SalesforceCase__x/fields/Cas_AccountholderTypeBeneficiaryC__c.field-meta.xml
<CustomField>
    <fullName>Cas_AccountholderTypeBeneficiaryC__c</fullName>
    <description>Cas_AccountholderTypeBeneficiaryC</description>
    <externalDeveloperName>Cas_AccountholderTypeBeneficiaryC</externalDeveloperName>
    <label>Tipologia Intestatario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>