force-app/main/default/objects/SalesforceCase__x/fields/Cas_Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Cas_Activity_Name__c</fullName>
    <description>Cas_Activity_Name</description>
    <externalDeveloperName>Cas_Activity_Name</externalDeveloperName>
    <label>Cas_Activity_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>