force-app/main/default/objects/SalesforceCase__x/fields/Cas_AddressFormulaC__c.field-meta.xml
<CustomField>
    <fullName>Cas_AddressFormulaC__c</fullName>
    <description>Cas_AddressFormulaC</description>
    <externalDeveloperName>Cas_AddressFormulaC</externalDeveloperName>
    <label>Indirizzo di fornitura</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>