force-app/main/default/objects/SalesforceCase__x/fields/Cas_AlertTypeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_AlertTypeC__c</fullName>
    <description>Cas_AlertTypeC</description>
    <externalDeveloperName>Cas_AlertTypeC</externalDeveloperName>
    <label>Cas_AlertTypeC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>