force-app/main/default/objects/SalesforceCase__x/fields/Cas_AlternativeAddressC__c.field-meta.xml
<CustomField>
    <fullName>Cas_AlternativeAddressC__c</fullName>
    <description>Cas_AlternativeAddressC</description>
    <externalDeveloperName>Cas_AlternativeAddressC</externalDeveloperName>
    <label>Indirizzo di recapito alternativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>