force-app/main/default/objects/SalesforceCase__x/fields/Cas_AmountC__c.field-meta.xml
<CustomField>
    <fullName>Cas_AmountC__c</fullName>
    <description>Cas_AmountC</description>
    <externalDeveloperName>Cas_AmountC</externalDeveloperName>
    <label>Cas_AmountC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>