force-app/main/default/objects/SalesforceCase__x/fields/Cas_AmountDifferenceReasonC__c.field-meta.xml
<CustomField>
    <fullName>Cas_AmountDifferenceReasonC__c</fullName>
    <description>Cas_AmountDifferenceReasonC</description>
    <externalDeveloperName>Cas_AmountDifferenceReasonC</externalDeveloperName>
    <label>Motivo Differenza Importi</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>