force-app/main/default/objects/SalesforceCase__x/fields/Cas_AnnualUnicInstallmentC__c.field-meta.xml
<CustomField>
    <fullName>Cas_AnnualUnicInstallmentC__c</fullName>
    <description>Cas_AnnualUnicInstallmentC</description>
    <externalDeveloperName>Cas_AnnualUnicInstallmentC</externalDeveloperName>
    <label>Rata Unica Annuale TARI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>