force-app/main/default/objects/SalesforceCase__x/fields/Cas_AppointmentCodeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_AppointmentCodeC__c</fullName>
    <description>Cas_AppointmentCodeC</description>
    <externalDeveloperName>Cas_AppointmentCodeC</externalDeveloperName>
    <label>Cas_AppointmentCodeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>