force-app/main/default/objects/SalesforceCase__x/fields/Cas_ApprovalProcessC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ApprovalProcessC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_ApprovalProcessC</description>
    <externalDeveloperName>Cas_ApprovalProcessC</externalDeveloperName>
    <label>Processo Approvativo</label>
    <type>Checkbox</type>
</CustomField>