force-app/main/default/objects/SalesforceCase__x/fields/Cas_AtecoCodeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_AtecoCodeC__c</fullName>
    <description>Cas_AtecoCodeC</description>
    <externalDeveloperName>Cas_AtecoCodeC</externalDeveloperName>
    <label>Codice Ateco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>