force-app/main/default/objects/SalesforceCase__x/fields/Cas_AttachmentsStringTARIC__c.field-meta.xml
<CustomField>
    <fullName>Cas_AttachmentsStringTARIC__c</fullName>
    <description>Cas_AttachmentsStringTARIC</description>
    <externalDeveloperName>Cas_AttachmentsStringTARIC</externalDeveloperName>
    <label>Allegati Ambiente</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>