force-app/main/default/objects/SalesforceCase__x/fields/Cas_BankAccountSignatoryFiscalCodeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_BankAccountSignatoryFiscalCodeC__c</fullName>
    <description>Cas_BankAccountSignatoryFiscalCodeC</description>
    <externalDeveloperName>Cas_BankAccountSignatoryFiscalCodeC</externalDeveloperName>
    <label>Cas_BankAccountSignatoryFiscalCodeC</label>
    <length>16</length>
    <type>Text</type>
</CustomField>