force-app/main/default/objects/SalesforceCase__x/fields/Cas_BankAccountSignatoryLastNameC__c.field-meta.xml
<CustomField>
    <fullName>Cas_BankAccountSignatoryLastNameC__c</fullName>
    <description>Cas_BankAccountSignatoryLastNameC</description>
    <externalDeveloperName>Cas_BankAccountSignatoryLastNameC</externalDeveloperName>
    <label>Cas_BankAccountSignatoryLastNameC</label>
    <length>60</length>
    <type>Text</type>
</CustomField>