force-app/main/default/objects/SalesforceCase__x/fields/Cas_BeneficiaryAccountC__c.field-meta.xml
<CustomField>
    <fullName>Cas_BeneficiaryAccountC__c</fullName>
    <description>Cas_BeneficiaryAccountC</description>
    <externalDeveloperName>Cas_BeneficiaryAccountC</externalDeveloperName>
    <label>Cas_BeneficiaryAccountC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>