force-app/main/default/objects/SalesforceCase__x/fields/Cas_BeneficiaryC__c.field-meta.xml
<CustomField>
    <fullName>Cas_BeneficiaryC__c</fullName>
    <description>Cas_BeneficiaryC</description>
    <externalDeveloperName>Cas_BeneficiaryC</externalDeveloperName>
    <label>Cas_BeneficiaryC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>