force-app/main/default/objects/SalesforceCase__x/fields/Cas_BeneficiaryPhoneNumberC__c.field-meta.xml
<CustomField>
    <fullName>Cas_BeneficiaryPhoneNumberC__c</fullName>
    <description>Cas_BeneficiaryPhoneNumberC</description>
    <externalDeveloperName>Cas_BeneficiaryPhoneNumberC</externalDeveloperName>
    <label>Recapito Telefonico erede/beneficiario alternativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>