force-app/main/default/objects/SalesforceCase__x/fields/Cas_BillDetailC__c.field-meta.xml
<CustomField>
    <fullName>Cas_BillDetailC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_BillDetailC</description>
    <externalDeveloperName>Cas_BillDetailC</externalDeveloperName>
    <label>Dettaglio Fattura</label>
    <type>Checkbox</type>
</CustomField>