force-app/main/default/objects/SalesforceCase__x/fields/Cas_BillingProblemC__c.field-meta.xml
<CustomField>
    <fullName>Cas_BillingProblemC__c</fullName>
    <description>Cas_BillingProblemC</description>
    <externalDeveloperName>Cas_BillingProblemC</externalDeveloperName>
    <label>Cas_BillingProblemC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>