force-app/main/default/objects/SalesforceCase__x/fields/Cas_BirthcityC__c.field-meta.xml
<CustomField>
    <fullName>Cas_BirthcityC__c</fullName>
    <description>Cas_BirthcityC</description>
    <externalDeveloperName>Cas_BirthcityC</externalDeveloperName>
    <label>Luogo di nascita</label>
    <length>255</length>
    <type>Text</type>
</CustomField>