force-app/main/default/objects/SalesforceCase__x/fields/Cas_BirthdayC__c.field-meta.xml
<CustomField>
    <fullName>Cas_BirthdayC__c</fullName>
    <description>Cas_BirthdayC</description>
    <externalDeveloperName>Cas_BirthdayC</externalDeveloperName>
    <label>Cas_BirthdayC</label>
    <type>DateTime</type>
</CustomField>