force-app/main/default/objects/SalesforceCase__x/fields/Cas_BlockOnComputationC__c.field-meta.xml
<CustomField>
    <fullName>Cas_BlockOnComputationC__c</fullName>
    <description>Cas_BlockOnComputationC</description>
    <externalDeveloperName>Cas_BlockOnComputationC</externalDeveloperName>
    <label>Blocco al calcolo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>