force-app/main/default/objects/SalesforceCase__x/fields/Cas_CAInvoiceDisputedC__c.field-meta.xml
<CustomField>
    <fullName>Cas_CAInvoiceDisputedC__c</fullName>
    <description>Cas_CAInvoiceDisputedC</description>
    <externalDeveloperName>Cas_CAInvoiceDisputedC</externalDeveloperName>
    <label>Cas_CAInvoiceDisputedC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>