force-app/main/default/objects/SalesforceCase__x/fields/Cas_CalculationBlockC__c.field-meta.xml
<CustomField>
    <fullName>Cas_CalculationBlockC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_CalculationBlockC</description>
    <externalDeveloperName>Cas_CalculationBlockC</externalDeveloperName>
    <label>Cas_CalculationBlockC</label>
    <type>Checkbox</type>
</CustomField>