force-app/main/default/objects/SalesforceCase__x/fields/Cas_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Cas_Campaign_Name__c</fullName>
    <description>Cas_Campaign_Name</description>
    <externalDeveloperName>Cas_Campaign_Name</externalDeveloperName>
    <label>Campagna</label>
    <length>255</length>
    <type>Text</type>
</CustomField>