force-app/main/default/objects/SalesforceCase__x/fields/Cas_CancellationReasonCodeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_CancellationReasonCodeC__c</fullName>
    <description>Cas_CancellationReasonCodeC</description>
    <externalDeveloperName>Cas_CancellationReasonCodeC</externalDeveloperName>
    <label>Cas_CancellationReasonCodeC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>