force-app/main/default/objects/SalesforceCase__x/fields/Cas_CancellationReasonDescriptionC__c.field-meta.xml
<CustomField>
    <fullName>Cas_CancellationReasonDescriptionC__c</fullName>
    <description>Cas_CancellationReasonDescriptionC</description>
    <externalDeveloperName>Cas_CancellationReasonDescriptionC</externalDeveloperName>
    <label>Cas_CancellationReasonDescriptionC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>