force-app/main/default/objects/SalesforceCase__x/fields/Cas_CAWithOrWithoutSEPAC__c.field-meta.xml
<CustomField>
    <fullName>Cas_CAWithOrWithoutSEPAC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_CAWithOrWithoutSEPAC</description>
    <externalDeveloperName>Cas_CAWithOrWithoutSEPAC</externalDeveloperName>
    <label>CA con/senza SEPA</label>
    <type>Checkbox</type>
</CustomField>