force-app/main/default/objects/SalesforceCase__x/fields/Cas_CemeteryNameC__c.field-meta.xml
<CustomField>
    <fullName>Cas_CemeteryNameC__c</fullName>
    <description>Cas_CemeteryNameC</description>
    <externalDeveloperName>Cas_CemeteryNameC</externalDeveloperName>
    <label>Cas_CemeteryNameC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>