force-app/main/default/objects/SalesforceCase__x/fields/Cas_ChangeDateC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ChangeDateC__c</fullName>
    <description>Cas_ChangeDateC</description>
    <externalDeveloperName>Cas_ChangeDateC</externalDeveloperName>
    <label>Data di cambio</label>
    <type>DateTime</type>
</CustomField>