force-app/main/default/objects/SalesforceCase__x/fields/Cas_ChargeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ChargeC__c</fullName>
    <description>Cas_ChargeC</description>
    <externalDeveloperName>Cas_ChargeC</externalDeveloperName>
    <label>Cas_ChargeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>