force-app/main/default/objects/SalesforceCase__x/fields/Cas_ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>Cas_ClosedDate__c</fullName>
    <description>Cas_ClosedDate</description>
    <externalDeveloperName>Cas_ClosedDate</externalDeveloperName>
    <label>Cas_ClosedDate</label>
    <type>DateTime</type>
</CustomField>