force-app/main/default/objects/SalesforceCase__x/fields/Cas_ClosureDraftDateC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ClosureDraftDateC__c</fullName>
    <description>Cas_ClosureDraftDateC</description>
    <externalDeveloperName>Cas_ClosureDraftDateC</externalDeveloperName>
    <label>Cas_ClosureDraftDateC</label>
    <type>DateTime</type>
</CustomField>