force-app/main/default/objects/SalesforceCase__x/fields/Cas_ClosureDraftDaysC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ClosureDraftDaysC__c</fullName>
    <description>Cas_ClosureDraftDaysC</description>
    <externalDeveloperName>Cas_ClosureDraftDaysC</externalDeveloperName>
    <label>Cas_ClosureDraftDaysC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>