force-app/main/default/objects/SalesforceCase__x/fields/Cas_ClusterC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ClusterC__c</fullName>
    <description>Cas_ClusterC</description>
    <externalDeveloperName>Cas_ClusterC</externalDeveloperName>
    <label>Cas_ClusterC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>