force-app/main/default/objects/SalesforceCase__x/fields/Cas_CohabitantsNumberC__c.field-meta.xml
<CustomField>
    <fullName>Cas_CohabitantsNumberC__c</fullName>
    <description>Cas_CohabitantsNumberC</description>
    <externalDeveloperName>Cas_CohabitantsNumberC</externalDeveloperName>
    <label>Numero coabitanti</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>