force-app/main/default/objects/SalesforceCase__x/fields/Cas_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cas_Comments__c</fullName>
    <description>Cas_Comments</description>
    <externalDeveloperName>Cas_Comments</externalDeveloperName>
    <label>Cas_Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>