force-app/main/default/objects/SalesforceCase__x/fields/Cas_CommercialProductC__c.field-meta.xml
<CustomField>
    <fullName>Cas_CommercialProductC__c</fullName>
    <description>Cas_CommercialProductC</description>
    <externalDeveloperName>Cas_CommercialProductC</externalDeveloperName>
    <label>Prodotto Commerciale</label>
    <length>100</length>
    <type>Text</type>
</CustomField>