force-app/main/default/objects/SalesforceCase__x/fields/Cas_ComparePaidToPayC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ComparePaidToPayC__c</fullName>
    <description>Cas_ComparePaidToPayC</description>
    <externalDeveloperName>Cas_ComparePaidToPayC</externalDeveloperName>
    <label>Cas_ComparePaidToPayC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>