force-app/main/default/objects/SalesforceCase__x/fields/Cas_ComplaintDetailC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ComplaintDetailC__c</fullName>
    <description>Cas_ComplaintDetailC</description>
    <externalDeveloperName>Cas_ComplaintDetailC</externalDeveloperName>
    <label>Dettaglio richiesta cliente</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>