force-app/main/default/objects/SalesforceCase__x/fields/Cas_ComplaintEntryChannelC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ComplaintEntryChannelC__c</fullName>
    <description>Cas_ComplaintEntryChannelC</description>
    <externalDeveloperName>Cas_ComplaintEntryChannelC</externalDeveloperName>
    <label>Canale di Ingresso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>