force-app/main/default/objects/SalesforceCase__x/fields/Cas_ComplaintTypeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ComplaintTypeC__c</fullName>
    <description>Cas_ComplaintTypeC</description>
    <externalDeveloperName>Cas_ComplaintTypeC</externalDeveloperName>
    <label>Cas_ComplaintTypeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>