force-app/main/default/objects/SalesforceCase__x/fields/Cas_CompletedDocumentationDateC__c.field-meta.xml
<CustomField>
    <fullName>Cas_CompletedDocumentationDateC__c</fullName>
    <description>Cas_CompletedDocumentationDateC</description>
    <externalDeveloperName>Cas_CompletedDocumentationDateC</externalDeveloperName>
    <label>Cas_CompletedDocumentationDateC</label>
    <type>DateTime</type>
</CustomField>