force-app/main/default/objects/SalesforceCase__x/fields/Cas_CompliantOriginEmailC__c.field-meta.xml
<CustomField>
    <fullName>Cas_CompliantOriginEmailC__c</fullName>
    <description>Cas_CompliantOriginEmailC</description>
    <externalDeveloperName>Cas_CompliantOriginEmailC</externalDeveloperName>
    <label>Indirizzo/email provenienza reclamo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>