force-app/main/default/objects/SalesforceCase__x/fields/Cas_ComponentVariationsWithBonusC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ComponentVariationsWithBonusC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_ComponentVariationsWithBonusC</description>
    <externalDeveloperName>Cas_ComponentVariationsWithBonusC</externalDeveloperName>
    <label>Cas_ComponentVariationsWithBonusC</label>
    <type>Checkbox</type>
</CustomField>