force-app/main/default/objects/SalesforceCase__x/fields/Cas_ConnIdC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ConnIdC__c</fullName>
    <description>Cas_ConnIdC</description>
    <externalDeveloperName>Cas_ConnIdC</externalDeveloperName>
    <label>Cas_ConnIdC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>