force-app/main/default/objects/SalesforceCase__x/fields/Cas_ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>Cas_ContactPhone__c</fullName>
    <description>Cas_ContactPhone</description>
    <externalDeveloperName>Cas_ContactPhone</externalDeveloperName>
    <label>Cas_ContactPhone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>