force-app/main/default/objects/SalesforceCase__x/fields/Cas_ContractCodeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ContractCodeC__c</fullName>
    <description>Cas_ContractCodeC</description>
    <externalDeveloperName>Cas_ContractCodeC</externalDeveloperName>
    <label>Codice contratto</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>