force-app/main/default/objects/SalesforceCase__x/fields/Cas_ContractsMergeNumberC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ContractsMergeNumberC__c</fullName>
    <description>Cas_ContractsMergeNumberC</description>
    <externalDeveloperName>Cas_ContractsMergeNumberC</externalDeveloperName>
    <label>Numero contratti da unificare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>