force-app/main/default/objects/SalesforceCase__x/fields/Cas_ContractStartDateC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ContractStartDateC__c</fullName>
    <description>Cas_ContractStartDateC</description>
    <externalDeveloperName>Cas_ContractStartDateC</externalDeveloperName>
    <label>Cas_ContractStartDateC</label>
    <type>DateTime</type>
</CustomField>