force-app/main/default/objects/SalesforceCase__x/fields/Cas_CopyTypeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_CopyTypeC__c</fullName>
    <description>Cas_CopyTypeC</description>
    <externalDeveloperName>Cas_CopyTypeC</externalDeveloperName>
    <label>Tipo Copia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>