force-app/main/default/objects/SalesforceCase__x/fields/Cas_CorrectAddressToVerifyC__c.field-meta.xml
<CustomField>
    <fullName>Cas_CorrectAddressToVerifyC__c</fullName>
    <description>Cas_CorrectAddressToVerifyC</description>
    <externalDeveloperName>Cas_CorrectAddressToVerifyC</externalDeveloperName>
    <label>Indirizzo corretto da verificare</label>
    <length>255</length>
    <type>Text</type>
</CustomField>