force-app/main/default/objects/SalesforceCase__x/fields/Cas_CorrectionDocumentEmissionDayC__c.field-meta.xml
<CustomField>
    <fullName>Cas_CorrectionDocumentEmissionDayC__c</fullName>
    <description>Cas_CorrectionDocumentEmissionDayC</description>
    <externalDeveloperName>Cas_CorrectionDocumentEmissionDayC</externalDeveloperName>
    <label>Data Emissione Documento di Rettifica</label>
    <type>DateTime</type>
</CustomField>