force-app/main/default/objects/SalesforceCase__x/fields/Cas_CorrectionPlannedTiqvC__c.field-meta.xml
<CustomField>
    <fullName>Cas_CorrectionPlannedTiqvC__c</fullName>
    <description>Cas_CorrectionPlannedTiqvC</description>
    <externalDeveloperName>Cas_CorrectionPlannedTiqvC</externalDeveloperName>
    <label>Cas_CorrectionPlannedTiqvC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>