force-app/main/default/objects/SalesforceCase__x/fields/Cas_CorrectionRightC__c.field-meta.xml
<CustomField>
    <fullName>Cas_CorrectionRightC__c</fullName>
    <description>Cas_CorrectionRightC</description>
    <externalDeveloperName>Cas_CorrectionRightC</externalDeveloperName>
    <label>Diritto Rettifica </label>
    <length>255</length>
    <type>Text</type>
</CustomField>