force-app/main/default/objects/SalesforceCase__x/fields/Cas_CreatedBy_Name__c.field-meta.xml
<CustomField>
    <fullName>Cas_CreatedBy_Name__c</fullName>
    <description>Cas_CreatedBy_Name</description>
    <externalDeveloperName>Cas_CreatedBy_Name</externalDeveloperName>
    <label>Cas_CreatedBy_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>