force-app/main/default/objects/SalesforceCase__x/fields/Cas_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Cas_CreatedDate__c</fullName>
    <description>Cas_CreatedDate</description>
    <externalDeveloperName>Cas_CreatedDate</externalDeveloperName>
    <label>Cas_CreatedDate</label>
    <type>DateTime</type>
</CustomField>