force-app/main/default/objects/SalesforceCase__x/fields/Cas_CreatorGroupC__c.field-meta.xml
<CustomField>
    <fullName>Cas_CreatorGroupC__c</fullName>
    <description>Cas_CreatorGroupC</description>
    <externalDeveloperName>Cas_CreatorGroupC</externalDeveloperName>
    <label>Gruppo Creatore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>