force-app/main/default/objects/SalesforceCase__x/fields/Cas_CustomerPaymentAgreementsC__c.field-meta.xml
<CustomField>
    <fullName>Cas_CustomerPaymentAgreementsC__c</fullName>
    <description>Cas_CustomerPaymentAgreementsC</description>
    <externalDeveloperName>Cas_CustomerPaymentAgreementsC</externalDeveloperName>
    <label>Cas_CustomerPaymentAgreementsC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>