force-app/main/default/objects/SalesforceCase__x/fields/Cas_CustomerRequestNumberDayC__c.field-meta.xml
<CustomField>
    <fullName>Cas_CustomerRequestNumberDayC__c</fullName>
    <description>Cas_CustomerRequestNumberDayC</description>
    <externalDeveloperName>Cas_CustomerRequestNumberDayC</externalDeveloperName>
    <label>Cas_CustomerRequestNumberDayC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>