force-app/main/default/objects/SalesforceCase__x/fields/Cas_DeceasedSurnameC__c.field-meta.xml
<CustomField>
    <fullName>Cas_DeceasedSurnameC__c</fullName>
    <description>Cas_DeceasedSurnameC</description>
    <externalDeveloperName>Cas_DeceasedSurnameC</externalDeveloperName>
    <label>Cognome del defunto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>