force-app/main/default/objects/SalesforceCase__x/fields/Cas_DelegateNameC__c.field-meta.xml
<CustomField>
    <fullName>Cas_DelegateNameC__c</fullName>
    <description>Cas_DelegateNameC</description>
    <externalDeveloperName>Cas_DelegateNameC</externalDeveloperName>
    <label>Cas_DelegateNameC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>