force-app/main/default/objects/SalesforceCase__x/fields/Cas_DepositAmountC__c.field-meta.xml
<CustomField>
    <fullName>Cas_DepositAmountC__c</fullName>
    <description>Cas_DepositAmountC</description>
    <externalDeveloperName>Cas_DepositAmountC</externalDeveloperName>
    <label>Cas_DepositAmountC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>