force-app/main/default/objects/SalesforceCase__x/fields/Cas_DepositC__c.field-meta.xml
<CustomField>
    <fullName>Cas_DepositC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_DepositC</description>
    <externalDeveloperName>Cas_DepositC</externalDeveloperName>
    <label>Cas_DepositC</label>
    <type>Checkbox</type>
</CustomField>