force-app/main/default/objects/SalesforceCase__x/fields/Cas_DepositExpirationDateC__c.field-meta.xml
<CustomField>
    <fullName>Cas_DepositExpirationDateC__c</fullName>
    <description>Cas_DepositExpirationDateC</description>
    <externalDeveloperName>Cas_DepositExpirationDateC</externalDeveloperName>
    <label>Scadenza Acconto</label>
    <type>DateTime</type>
</CustomField>