force-app/main/default/objects/SalesforceCase__x/fields/Cas_Description__c.field-meta.xml
<CustomField>
    <fullName>Cas_Description__c</fullName>
    <description>Cas_Description</description>
    <externalDeveloperName>Cas_Description</externalDeveloperName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>