force-app/main/default/objects/SalesforceCase__x/fields/Cas_DifferentNameFromTheApplicantC__c.field-meta.xml
<CustomField>
    <fullName>Cas_DifferentNameFromTheApplicantC__c</fullName>
    <description>Cas_DifferentNameFromTheApplicantC</description>
    <externalDeveloperName>Cas_DifferentNameFromTheApplicantC</externalDeveloperName>
    <label>Cas_DifferentNameFromTheApplicantC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>