force-app/main/default/objects/SalesforceCase__x/fields/Cas_DistributorFiscalCodeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_DistributorFiscalCodeC__c</fullName>
    <description>Cas_DistributorFiscalCodeC</description>
    <externalDeveloperName>Cas_DistributorFiscalCodeC</externalDeveloperName>
    <label>CF da distributore</label>
    <length>50</length>
    <type>Text</type>
</CustomField>