force-app/main/default/objects/SalesforceCase__x/fields/Cas_DistributorPracticeCodeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_DistributorPracticeCodeC__c</fullName>
    <description>Cas_DistributorPracticeCodeC</description>
    <externalDeveloperName>Cas_DistributorPracticeCodeC</externalDeveloperName>
    <label>Codice pratica distributore</label>
    <length>50</length>
    <type>Text</type>
</CustomField>