force-app/main/default/objects/SalesforceCase__x/fields/Cas_DistributorVatNumberC__c.field-meta.xml
<CustomField>
    <fullName>Cas_DistributorVatNumberC__c</fullName>
    <description>Cas_DistributorVatNumberC</description>
    <externalDeveloperName>Cas_DistributorVatNumberC</externalDeveloperName>
    <label>P.IVA da distributore</label>
    <length>50</length>
    <type>Text</type>
</CustomField>