force-app/main/default/objects/SalesforceCase__x/fields/Cas_DocumentalProcessTypeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_DocumentalProcessTypeC__c</fullName>
    <description>Cas_DocumentalProcessTypeC</description>
    <externalDeveloperName>Cas_DocumentalProcessTypeC</externalDeveloperName>
    <label>Tipo Processo Documentale</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>