force-app/main/default/objects/SalesforceCase__x/fields/Cas_DocumentAmountC__c.field-meta.xml
<CustomField>
    <fullName>Cas_DocumentAmountC__c</fullName>
    <description>Cas_DocumentAmountC</description>
    <externalDeveloperName>Cas_DocumentAmountC</externalDeveloperName>
    <label>Cas_DocumentAmountC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>